<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="@dimen/_16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by"
            android:textColor="@color/lynch"
            android:textSize="@dimen/text_14"/>

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="John Doe"
            android:textColor="@color/black_pearl"
            android:textSize="@dimen/text_14"
            android:layout_marginStart="@dimen/_4dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_8dp">

        <ImageView
            android:layout_width="@dimen/_24dp"
            android:layout_height="@dimen/_24dp"
            android:src="@drawable/ic_star"/>

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7"
            android:textColor="@color/black_pearl"
            android:textSize="@dimen/text_14"
            android:layout_marginStart="@dimen/_4dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created"
            android:textColor="@color/lynch"
            android:textSize="@dimen/text_14"/>

        <TextView
            android:id="@+id/created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10-10-2020"
            android:textColor="@color/black_pearl"
            android:textSize="@dimen/text_14"
            android:layout_marginStart="@dimen/_4dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="It isn't as easy as saying 'Wonder Woman 1984' is a good or bad movie. The pieces are there, and there are moments I adore, but it does come across as a bit of a mess, even though the action sequences are breathtaking. If you're a fan of the original film, you'll be more willing to take the ride, but for those more indifferent, it may be a bit of a blander sit. If you can and are planning to watch it, the theatrical experience is the way to go - there is nothing like seeing these stunning sets, fun action scenes and hearing Zimmer's jaw-dropping score like on the big screen."
        android:textColor="@color/black_pearl"
        android:textSize="@dimen/text_14"
        android:lineSpacingExtra="@dimen/_4dp"
        android:layout_marginTop="@dimen/_16dp"
        android:maxLines="3"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/seeMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_more"
        android:textColor="@color/cerulean_blue"
        android:textSize="@dimen/text_12"
        android:layout_marginTop="@dimen/_8dp"
        android:layout_gravity="end"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/separatorColor"
        android:layout_marginTop="@dimen/_16dp"/>

</LinearLayout>