<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <include layout="@layout/toolbar_back"
        android:id="@+id/toolbar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtubePlayerView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_240dp"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:autoPlay="false"
                app:showFullScreenButton="false"
                tools:background="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_16dp">

                <TextView
                    android:id="@+id/movieTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/my_movies"
                    android:textColor="@color/tangaroa"
                    android:textSize="@dimen/text_16"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recyclerGenres"
                    android:layout_marginTop="@dimen/_16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_8dp"
                    app:layout_constraintTop_toBottomOf="@id/popularityContainer">

                    <ImageView
                        android:layout_width="@dimen/_24dp"
                        android:layout_height="@dimen/_24dp"
                        android:src="@drawable/ic_star"/>

                    <TextView
                        android:id="@+id/voted"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="7/10"
                        android:textColor="@color/black_pearl"
                        android:textSize="@dimen/text_14"
                        android:layout_marginStart="@dimen/_4dp"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/popularityContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_8dp"
                    app:layout_constraintTop_toBottomOf="@id/title">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popularity"
                        android:textColor="@color/lynch"
                        android:textSize="@dimen/text_14"/>

                    <TextView
                        android:id="@+id/popularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="42938.232"
                        android:textColor="@color/black_pearl"
                        android:textSize="@dimen/text_14"
                        android:layout_marginStart="@dimen/_4dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textColor="@color/tangaroa"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_16"
                    android:layout_marginTop="@dimen/_16dp"/>

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textColor="@color/black_pearl"
                    android:textSize="@dimen/text_14"
                    android:layout_marginTop="@dimen/_8dp"
                    android:lineSpacingExtra="@dimen/_4dp"/>

                <LinearLayout
                    android:id="@+id/reviewsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/review"
                        android:textColor="@color/tangaroa"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_16"
                        android:layout_marginTop="@dimen/_16dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/recyclerReviews"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>