<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/imageContainer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="@dimen/_120dp"
        android:layout_height="@dimen/_140dp"
        app:cardCornerRadius="@dimen/_14dp"
        android:layout_margin="@dimen/_4dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_on_demand_video"
            android:scaleType="fitXY"
            android:id="@+id/imageMovie"/>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageContainer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageContainer"
        android:layout_marginStart="@dimen/_16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/my_movies"
            android:textColor="@color/tangaroa"
            android:textSize="@dimen/text_14"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/popularityContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8dp"
            app:layout_constraintTop_toBottomOf="@id/title">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popularity"
                android:textColor="@color/lynch"
                android:textSize="@dimen/text_14"/>

            <TextView
                android:id="@+id/popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="42938.232"
                android:textColor="@color/black_pearl"
                android:textSize="@dimen/text_14"
                android:layout_marginStart="@dimen/_4dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8dp"
            app:layout_constraintTop_toBottomOf="@id/popularityContainer">

            <ImageView
                android:layout_width="@dimen/_24dp"
                android:layout_height="@dimen/_24dp"
                android:src="@drawable/ic_star"/>

            <TextView
                android:id="@+id/voted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7/10"
                android:textColor="@color/black_pearl"
                android:textSize="@dimen/text_14"
                android:layout_marginStart="@dimen/_4dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/released_date"
                android:textColor="@color/lynch"
                android:textSize="@dimen/text_14"/>

            <TextView
                android:id="@+id/releasedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2020-09-01"
                android:textColor="@color/black_pearl"
                android:textSize="@dimen/text_14"
                android:layout_marginStart="@dimen/_4dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>